fixed Portfolio card justification and spacing

--- a/src/Components/Portfolio/_portfolio.scss
+++ b/src/Components/Portfolio/_portfolio.scss
@@ -6,11 +6,12 @@
 	width: 100%;
 }
 .card-grid {
-	align-items: center;
+	// align-content: center;
 	color: black;
 	display: grid;
 	grid-gap: 8px 8px;
-	justify-items: center;
+	justify-content: center;
+	// justify-items: center;
 	margin-top: 8vh;
 
 	a:link,
@@ -20,8 +21,8 @@
 	}
 }
 .card-grid--large {
-	grid-template-columns: 1fr 1fr;
+	grid-template-columns: auto auto;
 }
 .card-grid--small {
-	grid-template-columns: 1fr 1fr;
+	grid-template-columns: auto auto;
 }
